# seek-bug

./: CMakeLists.txt  LICENSE  LICENSE.mit  README.md  main.cpp
include/seek-bug/: AICommands.h  SeekBugContext.h  llm.h
lib/: CMakeLists.txt
lib/AICommands/: AICommands.cpp  CMakeLists.txt  Plugin.cpp  llm.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/basic/: help.test
tools/: CMakeLists.txt
tools/seek-bug-dap/: CMakeLists.txt  DAP.cpp  package-lock.json  package.json  seek-bug-dap.cpp
tools/seek-bug-dap/src-ts/: extension.ts
